added animation to girlsWhoCodeTypography

--- a/girlsWhoCodeTypography/html/index.html
+++ b/girlsWhoCodeTypography/html/index.html
@@ -2,59 +2,16 @@
 <html>
 <head>
 	<title></title>
-	<link rel="../css/style.css" type="text/css" href="theme.css">
-	<style>
-	@import url(http://fonts.googleapis.com/css?family=Mr+Dafoe);
-	@import url('https://fonts.googleapis.com/css?family=Berkshire+Swash');
-body { background: #ff8b8b; color: #fff; position: relative;}
-
-.future-cop {
-  position: relative;
-  
-}
-.future {
-    position: absolute;
-    left: 0;
-    top: 0px;
-    font-family: 'Berkshire Swash';
-    font-size: 200px;
-    margin-top: 0px;
-    margin-bottom: 0;
-    color: #ff0199;
-    -webkit-text-fill-color: rgb(255, 255, 255);
-    text-shadow: -2px -2px 0 #fffeff;
-    -webkit-filter: drop-shadow(3px 3px 1px #441F62);
-    -webkit-transform: skew(-5deg,-1deg);
-    font-weight: normal;
-    z-index: 2;
-    margin-left: 60px;
-    padding-left: 50px;
-    padding-right: 70px;
-}
-span.girls {
-    position: inherit;
-    top: 27px;
-    left: 40px;
-}
-span.who {
-    left: 402px;
-    position: inherit;
-    top: 195px;
-}
-span.code {
-    position: inherit;
-    left: 162px;
-    top: 410px;
-}
-</style>
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	
 </head>
 
 <body>
 <div class="future-cop">
 <h3 class="future">
-  <span class="girls blink">g1rls</span><br>
-  <span class = who>wh0</span><br>
-  <span class = "code">c0de</span><br>
+  <span class="girls"><span class="char">g</span>1<span class="char">rls</span></span><br>
+  <span class = who><span class="char">wh</span>0</span><br>
+  <span class = "code"><span class="char">c</span>0<span class="char">de</span></span><br>
   </h3>
 </div>
 </body>
