changed cool to spice

--- a/cool/html/index.html
+++ b/cool/html/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Fire</title>
-	<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+	<title>spice</title>
+	<link href="https://fonts.googleapis.com/css?family=Griffy" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
 <div class="container">
 <div class="text">
-	COOL
+	spicy
 </div>
 </div>
 </body>
