--- a/cool/html/index.html
+++ b/cool/html/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>spice</title>
-	<link href="https://fonts.googleapis.com/css?family=Griffy" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
