simple box animation within friday-midnight

--- a/soloYoloTypography/html/index.html
+++ b/soloYoloTypography/html/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>YOLO</title>
+	<title>SOLO</title>
 	<link href="https://fonts.googleapis.com/css?family=Cherry+Cream+Soda" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
 <div class="container">
-<span class="firstChar">S</span><span class="secondChar">O</span><span class="thirdChar">L</span><span class="fourthChar">O</span>			
+<span class="firstChar char">Y</span>
+<span class="secondChar char">O</span>
+<span class="thirdChar char">L</span>
+<span class="fourthChar char">O</span>
+<span class="fifthIteration phrase">Y0L0</span>
 </div>
 </body>
 
